src/test/ui/span/regions-close-over-type-parameter-2.stderr
error: `tmp0` does not live long enough
  --> $DIR/regions-close-over-type-parameter-2.rs:35:5
   |
33 |         let tmp1 = &tmp0; //~ ERROR `tmp0` does not live long enough
   |                     ---- borrow occurs here
34 |         repeater3(tmp1)
35 |     };
   |     ^- borrowed value needs to live until here
   |     |
   |     `tmp0` dropped here while still borrowed

error: aborting due to previous error

